
- Reverted fix for bug #51176 (Static calling in non-static method behaves
  like $this->). (Felipe)

- Added stat support for zip stream. (Pierre)
- Added follow_location (enabled by default) option for the http stream 
  support. (Pierre)
- Added new character sets to mysqlnd, which are available in MySQL 5.5
  (Andrey)
- Improved support for is_link and related functions on Windows. (Pierre)

- Added support for the ( and ) delimiters/separators to
  DateTime::createFromFormat(). (Derick)
- Added custom process title for FPM. (fat)
- Added '-t/--test' to php-fpm to check and validate FPM conf file. (fat)
- Added statistics about listening socket queue length for FPM.
  (andrei dot nigmatulin at gmail dot com, fat)
- Implemented FR #52348, Ability to detect zend multibyte at runtime. (Kalle)
- Implemented FR #52173, added functions pcntl_get_last_error() and 
  pcntl_strerror(). (nick dot telford at gmail dot com, Arnaud)
- Implemented symbolic links support for open_basedir checks. (Pierre)
- Implemented FR #51804, SplFileInfo::getLinkTarget on Windows. (Pierre)
- Implemented FR #50692, not uploaded files don't count towards
  max_file_uploads limit. As a side improvement, temporary files are not opened
  for empty uploads and, in debug mode, 0-length uploads. (Gustavo)
- Added a 3rd parameter to get_html_translation_table. It now takes a charset
  hint, like htmlentities et al. (Gustavo)
- Implemented FR #44164, setting the header "Content-length" implicitly
  disables zlib.output_compression.

- Fixed a possible double free in imap extension (Identified by Mateusz 
  Kocielski). (CVE-2010-4150). (Ilia)
- Fixed NULL pointer dereference in ZipArchive::getArchiveComment.
  (CVE-2010-3709). (Maksymilian Arciemowicz)
- Fixed possible flaw in open_basedir (CVE-2010-3436). (Pierre)
- Fixed MOPS-2010-24, fix string validation. (CVE-2010-2950). (Pierre)
- Fixed symbolic resolution support when the target is a DFS share. (Pierre)