@@ -11,6 +11,26 @@
 #include "build-defs.h" /* for PHP_ defines */
 #include "fpm/fpm_conf.h"
 
+#define FPM_PHP_INI_TO_EXPAND \
+	{ \
+		"error_log", \
+		"extension_dir", \
+		"mime_magic.magicfile", \
+		"sendmail_path", \
+		"session.cookie_path", \
+		"session_pgsql.sem_file_name", \
+		"soap.wsdl_cache_dir", \
+		"uploadprogress.file.filename_template", \
+		"xdebug.output_dir", \
+		"xdebug.profiler_output_dir", \
+		"xdebug.trace_output_dir", \
+		"xmms.path", \
+		"axis2.client_home", \
+		"blenc.key_file", \
+		"coin_acceptor.device", \
+		NULL \
+	}
+
 struct fpm_worker_pool_s;
 
 int fpm_php_init_child(struct fpm_worker_pool_s *wp);
